--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <main>
       <canvas id="canvas" class="canvas-layout"></canvas>
-      <canvas id="canvasBase" class="canvas-second-layout"></canvas>
+      <div id="canvasBase" class="canvas-second-layout"></div>
     </main>
     <script
       async
@@ -52,6 +52,7 @@
         }
       }
     </script>
+    <script defer type="module" src="./tracking3D.js"></script>
     <script defer src="./main.js"></script>
   </body>
 </html>
